--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,14 @@
 
  }
 
+ .bgg-04 {
+   background-image: linear-gradient(to bottom,#ffcca8,#fffae9);
+   /* ไล่สีจากสีชมพูอ่อน ไปยังสีส้ม */
+   /* min-height: 100vh   */
+   /* ให้ความสูงเต็มหน้าจอ */
+
+ }
+
  .rounded-shadow-img {
    border-radius: 15px;
    /* ทำให้มุมโค้งมน (ปรับเป็น 50% ถ้าอยากได้รูปทรงวงกลม) */
@@ -162,13 +170,10 @@
 
  }
 
- .colored-box {
-   background-color: #fcf5d9;
-   /* สีพื้นหลังเขียว */
-   /* padding: 10px; */
-
- }
-
  .responsive-img {
   width: 100%;
+ }
+
+ .footertext{
+   color: #7a5758;
  }
